force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__AmountBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingInclTaxFCY__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BuyInTaxAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>