force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__AmountBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingInclTaxLocal__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BuyInTaxAmountJPY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Incl Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>