force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__AmountBuyingInclTaxLocalValue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingInclTaxLocalValue__c</fullName>
    <label>Amount Buying Incl Tax (Local)-Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>