force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__AmountofTaxBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountofTaxBuyingFCY__c</fullName>
    <formula>IF( or(
and(clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c = Null, clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__InvoiceTo__c = Null),
clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c =  clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__c,
clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__InvoiceTo__c =  clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__c),
clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BuyTaxNum_USD__c, 0)</formula>
    <label>Amount of Tax-Buying(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>