force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__AmountSellingInclTaxFCYValue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountSellingInclTaxFCYValue__c</fullName>
    <label>Amount Selling Incl Tax (FCY)-Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>