force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__BankID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ID</label>
    <referenceTo>clofor_com_cfs__BankTransaction__c</referenceTo>
    <relationshipLabel>FMS BILL+TRX PLAN</relationshipLabel>
    <relationshipName>FMSBillTrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>