force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__BillNameatPrintENG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillNameatPrintENG__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__InsatuyouSyohinEng__c</formula>
    <label>Bill Name at Print(ENG)</label>
    <type>Text</type>
</CustomField>