force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__BillNameatPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillNameatPrintLocal__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__InsatuyouSyohin__c</formula>
    <label>Bill Name at Print(Local)</label>
    <type>Text</type>
</CustomField>