force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__BillPayToSameTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillPayToSameTrxPlan__c</fullName>
    <label>Bill Pay To Same Trx Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>