force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__CurrencySelling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrencySelling__c</fullName>
    <formula>text( clofor_com_cfs__FMSBillID__r.clofor_com_cfs__curr__c )</formula>
    <label>Currency-Selling</label>
    <type>Text</type>
</CustomField>