force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__DepositOffsetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepositOffsetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT OFFSET ID</label>
    <referenceTo>clofor_com_cfs__DepositOffset__c</referenceTo>
    <relationshipLabel>FMS BILL+TRX PLAN</relationshipLabel>
    <relationshipName>FMSBillTrxPlanDepOffs</relationshipName>
    <type>Lookup</type>
</CustomField>