force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__DetailCostSummary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DetailCostSummary__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.Name +&apos; | &apos;+ clofor_com_cfs__FMSBillID__r.Name +&apos; | &apos;+ clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__r.Name +&apos; | &apos;+ clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Tariff__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Cost Summary</label>
    <type>Text</type>
</CustomField>