force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__ETDETA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ETDETA__c</fullName>
    <formula>text(clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__ETD__c) &amp; &quot;/&quot; &amp; text(clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__ETA__c)</formula>
    <label>ETD/ETA</label>
    <type>Text</type>
</CustomField>