force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__FMSShipmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSShipmentOrderID__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__ID__c</formula>
    <label>FMS SHIPMENT ORDER ID</label>
    <type>Text</type>
</CustomField>