force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__FMSUnpaidBalOfBuyingUSDPayReq__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSUnpaidBalOfBuyingUSDPayReq__c</fullName>
    <label>FMS UNPAID BAL OF BUYING(USD)-PAY REQ</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>