force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__FMSUnreceivedBalOfSellingLocalTrx__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSUnreceivedBalOfSellingLocalTrx__c</fullName>
    <label>FMS UNRECEIVED BAL OF SELLING(LOCAL)-TRX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>