force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__FMSUnreceivedBalOfSellingUSDTrx__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSUnreceivedBalOfSellingUSDTrx__c</fullName>
    <label>FMS UNRECEIVED BAL OF SELLING(USD)-TRX</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>