force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__FTMSBillName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FTMSBillName__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F/TMS Bill Name</label>
    <type>Text</type>
</CustomField>