force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__FTMSBillText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FTMSBillText__c</fullName>
    <label>F/TMS Bill-Text</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>