force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceTo__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__r.Name</formula>
    <label>Invoice To</label>
    <type>Text</type>
</CustomField>