force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__JobRequestID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JobRequestID__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__JobRequestID__c</formula>
    <label>Job Request ID</label>
    <type>Text</type>
</CustomField>