force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__MBLNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MBLNumber__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__MBL_Number_SEA_AIR__c</formula>
    <label>M B/L NUMBER</label>
    <type>Text</type>
</CustomField>