force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetProcessedBuyingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetProcessedBuyingAmountLocal__c</fullName>
    <label>Offset Processed Buying Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>