force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetProcessedSellingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetProcessedSellingAmountFCY__c</fullName>
    <label>Offset Processed Selling Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>