force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetProcessedSellingAmountFCYFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetProcessedSellingAmountFCYFor__c</fullName>
    <formula>IF(and(clofor_com_cfs__FMSBillID__r.clofor_com_cfs__AMOUNT_PAID_SELLING_USD__c &lt;&gt; 0,  text(clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BANKTRANSITTYPE__c) =&quot;相殺&quot;),  clofor_com_cfs__FMSBillID__r.clofor_com_cfs__AMOUNT_PAID_SELLING_USD__c  , 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Processed Selling Amount(FCY)-F</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>