force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetProcessedSellingAmountLocalFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetProcessedSellingAmountLocalFor__c</fullName>
    <formula>IF(and(text(clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BANKTRANSITTYPE__c)=&quot;相殺&quot;,  clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Nyukingaku__c  &lt;&gt; 0) , clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Nyukingaku__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Processed Selling Amount(Local)-F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>