force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetProcessingStatus__c</fullName>
    <label>Offset Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReceivablePayableProcessingStatus</valueSetName>
    </valueSet>
</CustomField>