force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetRemainedSellingAmountFCYFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetRemainedSellingAmountFCYFor__c</fullName>
    <formula>clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__OffseRemainedSellingAmountFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Selling Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>