force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__OffsetRemainedSellingAmountLocalFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetRemainedSellingAmountLocalFor__c</fullName>
    <formula>clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__OffsetRemainedSellingAmountLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Selling Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>