force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentTo__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__r.Name</formula>
    <label>Payment To</label>
    <type>Text</type>
</CustomField>