force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__POLAODPODAOA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POLAODPODAOA__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__PortOfLoadingDetailPrint__c &amp; &quot;/&quot; &amp;   clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__PortOfDischargeDetailPrint__c</formula>
    <label>P.O.L(A.O.D)/P.O.D(A.O.A)</label>
    <type>Text</type>
</CustomField>