force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__StartOffsetAutomaticProcessing__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StartOffsetAutomaticProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Offset Automatic Processing</label>
    <type>Checkbox</type>
</CustomField>