force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__TotalAmountofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofSellingLocal__c</fullName>
    <formula>IF( or(
and(clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c = Null, clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__InvoiceTo__c = Null),
clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__InvoiceTo__c = clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__c,
clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c = clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__c),
clofor_com_cfs__FMSBillID__r.clofor_com_cfs__SellAmountJPN__c, 0)</formula>
    <label>Total Amount of Selling(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>