force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__TrxPlanName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanName__c</fullName>
    <formula>clofor_com_cfs__PaymentRequestID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trx Plan Name</label>
    <type>Text</type>
</CustomField>