force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__UnreceiveBalOfSellingLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceiveBalOfSellingLocalFormula__c</fullName>
    <formula>IF( or(
and(clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c = Null, clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__InvoiceTo__c = Null),
clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__InvoiceTo__c = clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__c ,
clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c = clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__c),
clofor_com_cfs__FMSBillID__r.clofor_com_cfs__SellDifferentiation__c, 0)</formula>
    <label>UNRECEIVED BAL OF SELLING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>