force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/clofor_com_cfs__VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VesselFlight__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__VESSEL_FLIGHT__c &amp; &quot;/&quot; &amp;
clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Anken__r.clofor_com_cfs__No_Voyage_Flight__c</formula>
    <label>Vessel/Flight</label>
    <type>Text</type>
</CustomField>