force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/FTMSBillduplicatecheck__c.field-meta.xml
<CustomField>
    <fullName>FTMSBillduplicatecheck__c</fullName>
    <label>F/TMS Bill-duplicate check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>