force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/fields/SameAccountpaymentto__c.field-meta.xml
<CustomField>
    <fullName>SameAccountpaymentto__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__c =  clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Account payment to</label>
    <type>Checkbox</type>
</CustomField>