force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/validationRules/InvoicetoPaymenttomustequalPaymentto.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoicetoPaymenttomustequalPaymentto</fullName>
    <active>true</active>
    <errorConditionFormula>AND( clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__c &lt;&gt; clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c , clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__c  &lt;&gt; clofor_com_cfs__PaymentRequestID__r.clofor_com_cfs__PaymentTo__c)</errorConditionFormula>
    <errorMessage>Please choose billing with &apos;Invoice to Account&apos; or &apos;Payment to Account&apos; same as &apos;Payment to Account&apos; in Trx Plan</errorMessage>
</ValidationRule>