force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>