force-app/main/default/objects/clofor_com_cfs__FMSBillPayReq__c/listViews/clofor_com_cfs__MassiveOffset.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__MassiveOffset</fullName>
    <columns>clofor_com_cfs__PaymentRequestID__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__FMSBillID__c</columns>
    <columns>clofor_com_cfs__FMSShipmentOrderID__c</columns>
    <columns>clofor_com_cfs__BillInvToSameTrxPlan__c</columns>
    <columns>clofor_com_cfs__OffsetRemainedSellingAmountLocalFor__c</columns>
    <columns>clofor_com_cfs__OffsetRemainedSellingAmountFCYFor__c</columns>
    <columns>clofor_com_cfs__BillPayToSameTrxPlan__c</columns>
    <columns>clofor_com_cfs__OffsetRemainedBuyingAmountLocalFor__c</columns>
    <columns>clofor_com_cfs__OffsetRemainedBuyingAmountFCYFor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Massive Offset</label>
</ListView>